Fix test command