@@ -7,13 +7,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class PingManager {
 
-    private Map<UUID, Ping> listeners;
-
-    private Server server;
+    private final Map<UUID, Ping> listeners;
+    private final Server server;
 
     public PingManager(Server server) {
         this.server = server;
@@ -22,19 +20,18 @@ public class PingManager {
 
     public void onPongPacket(PingPacket packet) {
         Voicechat.LOGGER.info("Received pong {}", packet.getId());
-        Ping ping = listeners.get(packet.getId());
+        Ping ping = listeners.remove(packet.getId());
         if (ping == null) {
             return;
         }
         ping.listener.onPong(packet);
-        listeners.remove(packet.getId());
     }
 
     public void checkTimeouts() {
         if (listeners.isEmpty()) {
             return;
         }
-        List<Map.Entry<UUID, Ping>> timedOut = listeners.entrySet().stream().filter(uuidPingEntry -> uuidPingEntry.getValue().isTimedOut()).collect(Collectors.toList());
+        List<Map.Entry<UUID, Ping>> timedOut = listeners.entrySet().stream().filter(uuidPingEntry -> uuidPingEntry.getValue().isTimedOut()).toList();
         for (Map.Entry<UUID, Ping> ping : timedOut) {
             ping.getValue().listener.onTimeout();
             listeners.remove(ping.getKey());
@@ -44,15 +41,15 @@ public class PingManager {
     public void sendPing(ClientConnection connection, long timeout, PingListener listener) throws Exception {
         UUID id = UUID.randomUUID();
         long timestamp = System.currentTimeMillis();
+        listeners.put(id, new Ping(listener, timestamp, timeout));
         server.sendPacket(new PingPacket(id, timestamp), connection);
         Voicechat.LOGGER.info("Sent ping {}", id);
-        listeners.put(id, new Ping(listener, timestamp, timeout));
     }
 
     private static class Ping {
-        private PingListener listener;
-        private long timestamp;
-        private long timeout;
+        private final PingListener listener;
+        private final long timestamp;
+        private final long timeout;
 
         public Ping(PingListener listener, long timestamp, long timeout) {
             this.listener = listener;
